--- a/PETA2.html
+++ b/PETA2.html
@@ -16,9 +16,10 @@
             text-align: center;
             margin: 0;
         }
-        .paper {
-            width: 200px;
-            height: 200px;
+       .paper {
+            width: 80%; /* Responsive width */
+            max-width: 300px;
+            height: auto; /* Auto height */
             background: white;
             border-radius: 10px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
@@ -27,7 +28,13 @@
             align-items: center;
             cursor: pointer;
             transition: transform 0.5s ease-in-out;
-            
+            margin: 20px auto; 
+        }
+        @media (max-width: 600px) {
+            .paper {
+                width: 90%; /* Adjust width for smaller screens */
+                margin: 10px; /* Adjust margin */
+            }
         }
     </style>
 </head>
